# QT_HomeWork

./: CMakeLists.txt  main.cpp
